--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
        <!--------UNIDADES--------->
 
     <h2 class="text-center mt-5 mb-4" id="h2">Nuestras Unidades</h2>
-    <p class="text-center mb-5 pm">6 confortables cabañas con estilo patagónico independientes entre sí. Combinando madera y piedra de la zona con un moderno y bien decorado equipamiento, logrando de esta manera un cálido ambiente inmerso en un paisaje único. </p>
+    <p class="text-center mb-5 pm">Seis confortables cabañas con estilo patagónico independientes entre sí. Combinando madera y piedra de la zona con un moderno y bien decorado equipamiento, logrando de esta manera un cálido ambiente inmerso en un paisaje único. Te invitamos a nuestro lugar en el mundo donde podrás descansar, desconectarte de la rutina y disfrutar de nuestra bellísima Patagonia. Somos apasionados de las experiencias de viajes y con atención cálida y cuidadosa vamos a hacer todo lo posible para que disfrutes de la espectacular naturaleza y que esta experiencia sea un recuerdo inolvidable. </p>
         <!--cards cabañas--->
 
               <!--card1-->
@@ -251,11 +251,11 @@
       </section>
 
 
-    <!--------EXCURSIONES-------->
+    <!--------ACTIVIDADES-------->
 
-    <h2 class="display-6 text-center p-3 mt-4" id="h2ex">Actividades</h2>
+    <h2 class="display-6 text-center p-3 mt-4" id="h2">Actividades</h2>
     <div class="mb-4" id="h5">
-    <h5 class="mb-5 pm">Contamos con excursiones, paseos y otras actividades turísticas para hacer en Bariloche. Viví la mejor experiencia para conocer la ciudad. Podes contratar con o sin traslado.</h5>
+    <p class="mb-5 pm">Contamos con excursiones, paseos y otras actividades turísticas para hacer en Bariloche. Viví la mejor experiencia para conocer la ciudad. Paseos tradicionales que recorren el Parque Nacional Nahuel Huapi de Norte a Sur en toda su inmensidad. Podrás visitar Bariloche, Villa La Angostira, San Martín de los Andes, Cerro Tronador, El Bolsón. Tambien podras navegar por el Lago Nahuel Huapi, que se caracteriza por su gran tamaño, su bello entorno y sus aguas cristalinas. Navegarlo es una de las actividades preferidas de quienes nos visitan y que permiten conocer la extraordinaria geografía y fauna a bordo de modernas embarcaciones. </h5>
     </div>
 
     <section class="container-fluid" >
@@ -263,7 +263,7 @@
 
         <div class="col " id="card" data-aos="fade-right">
           <div class="card shadow-lg" id="cardEx">
-            <div class="card-header">
+            <div class="card-header text-center">
               Cerro Tronador
             </div>
             <img src="images/tronador.jpg" class="card-img-top" id="cardEx" alt="cerrotronador">
@@ -272,7 +272,7 @@
 
         <div class="col" id="card" data-aos="fade-up">
           <div class="card shadow-lg" id="cardEx">
-            <div class="card-header">
+            <div class="card-header text-center">
               Ruta de los 7 Lagos
             </div>
             <img src="images/lagos.jpg" class="card-img-top" id="cardEx" alt="7lagos">
@@ -281,13 +281,16 @@
 
         <div class="col" id="card">
           <div class="card shadow-lg" id="cardEx" data-aos="fade-left">
-            <div class="card-header">
+            <div class="card-header text-center">
               Isla Victoria
             </div>
             <img src="images/victoria.jpg" class="card-img-top" id="cardEx" alt="islavictoria">            
           </div>
         </div>
 
+      </div>
+      <div id="btnunits">
+        <a href="units.html" class="btn btn-outline-secondary btn-xl text-center mt-5" >Conoce todas nuestras Actividades</a>
       </div>
     </section>
 
