--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
       </div>
 
-    <h1 class="display-5 text-center p-3" id="h1"> Complejo Casa de Piedra</h1>
+    <h1 class="text-center p-3" id="h1"> Complejo Casa de Piedra</h1>
     <p class="text-center pm mb-5">En plena naturaleza y a sólo 13km de la ciudad de Bariloche. Con vista a los Cerros y a la cordillera de Los Andes.
     Totalmente equipadas con la mejor calidad y el mayor confort, para disfrutar y descansar todo el año. En el Km 13 de la Avenida Bustillo se encuentra el Complejo Casa de Piedra. Cómodas unidades totalmente equipadas ubicadas en un marco natural único. Rodeados por un bosque autóctono, muy cerca de todo y a pocos minutos de la ciudad con todo lo necesario para hacer de su estadía un recuerdo inolvidable.</p>
     </header>
@@ -101,7 +101,7 @@
         <!--cards cabañas--->
 
               <!--card1-->
-    <section class="container-fluid" >
+    <section class="container-xl" >
         <div class="row">
           <div class="col-md-4 col-xl-4 mb-4" id="card" data-aos="fade-right">
             <div class="card shadow-lg" >
@@ -124,8 +124,8 @@
                           <li class="list-group-item">Cabañas de una planta.</li>
                           <li class="list-group-item">Baño privado.</li>
                           <li class="list-group-item">Servicio ropa blanca.</li>
-                          <li class="list-group-item">Habitacion con cama matrimonial.</li>
-                          <li class="list-group-item">Cocina integrada.</li>
+                          <li class="list-group-item">Habitacion con cama Queen Size.</li>
+                          <li class="list-group-item">Cocina totalmente equipada.</li>
                       </ul>
                   </div>
                   </div>
@@ -160,11 +160,11 @@
                   <div id="flush-collapseOne2" class="accordion-collapse collapse" aria-labelledby="flush-headingOne">
                     <div class="accordion-body">
                         <ul class="list-group">
-                          <li class="list-group-item">Departamentos de una o dos plantas.</li>
+                          <li class="list-group-item">Departamentos dos plantas.</li>
                           <li class="list-group-item">Galeria o deck exterior</li>
                           <li class="list-group-item">Servicio de ropa blanca.</li>
-                          <li class="list-group-item">Habitacion con cama matrimonal y habitacion con cama individual.</li>
-                          <li class="list-group-item">Cocina y comedor integrado.</li>
+                          <li class="list-group-item">Habitacion principal con baño en Suite.</li>
+                          <li class="list-group-item">Loza radiante.</li>
                       </ul>
                   </div>
                   </div>
@@ -198,11 +198,11 @@
                   <div id="flush-collapseOne3" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" >
                     <div class="accordion-body">
                         <ul class="list-group">
-                          <li class="list-group-item">Nuevo alojamiento estilo GLAMPING.</li>
-                          <li class="list-group-item">Acampe libre estilo hotel.</li>
-                          <li class="list-group-item">Servicio de ropa blanca.</li>
+                          <li class="list-group-item">Hasta 12 personas.</li>
+                          <li class="list-group-item">Hogar a leña.</li>
+                          <li class="list-group-item">Habitaciones con cama King size.</li>
                           <li class="list-group-item">Baño en suite.</li>
-                          <li class="list-group-item">Deck privado.</li>
+                          <li class="list-group-item">Bañera de hidromasajes.</li>
                       </ul>
                   </div>
                   </div>
@@ -213,85 +213,53 @@
             </div>
           </div>
           <div id="btnunits">
-            <a href="units.html" class="btn btn-outline-secondary btn-xl text-center mt-3" >Ver todas las Unidades</a>
+            <a href="units.html" class="btn btn-outline-secondary btn-xl text-center mt-3" >Conoce nuestras Unidades</a>
           </div>
-      </section>
-
-      <!----------UBICACION--------->
-
-    <h2 class="display-6 text-center" id="h22">Ubicacion</h2>
-      
-      <section class="container-fluid">
-
-        <div class="row row-cols-1 row-cols-lg-2 row-cols-xl-2 g-3 " id="boxubi">
-
-          <div class="col" >
-            <div class="card shadow-lg" data-aos="fade-right" >
-              <div class="card-body" id="iframe">
-                <div class="ratio ratio-4x3" >
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4252.348725834405!2d-71.45173996091913!3d-41.09380449304551!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x961a77e3ab281749%3A0xdceb488aa147f1ee!2sAv.%20Exequiel%20Bustillo%2013840%2C%20San%20Carlos%20de%20Bariloche%2C%20R%C3%ADo%20Negro!5e0!3m2!1ses-419!2sar!4v1664164530947!5m2!1ses-419!2sar" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="mapa"></iframe>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-lg" data-aos="fade-left">
-              <div class="card-body text-center .gradient" id="bodyCard">
-                <h5 class="card-title" id="ubiTitle">¿Donde nos ubicamos?</h5>           
-                <p class="card-text">Complejo Casa de Piedra se encuentra ubicado en Av. Bustillo 13840. Cuenta con una excelente vista al Lago Nahuel Huapi.
-                Estratégicamente ubicados para la mejor vista de Bariloche y su entorno... Atendido por sus dueños y con una excelente ubicación frente al lago Nahuel Huapi y a tan sólo 800 metros de Playa Serena, lo invita a disfrutar de su estadía en Bariloche. En medio de un paisaje deslumbrante de montañas y bosques. Disfrutarás de una fascinante naturaleza en una hectárea de bosque nativo de viejos cipreses, amplio parque, sendas, rincones y flores durante todo el año.</p>
-                <h5 class="card-subtitle" id="ubiTitle" >¿Como llegar?</h5>
-                <p>La linea 20 de Transporte Urbano de Pasajos (TUP) ofrece el servicio que te lleva desde la terminal de micros, pasando por el centro de San Carlos de Bariloche. Para tomarlo en el centro podés hacerlo en Moreno al 400, en la Plaza que está detrás del Centro Cívico en San Martín e Indendencia o sino sobre la Avenida Exequiel Bustillo.</p>            
-              </div>
-            </div>
-          </div>
-
-        </div>
       </section>
 
 
     <!--------ACTIVIDADES-------->
-
-    <h2 class="display-6 text-center p-3 mt-4" id="h2">Actividades</h2>
-    <div class="mb-4" id="h5">
-    <p class="mb-5 pm">Contamos con excursiones, paseos y otras actividades turísticas para hacer en Bariloche. Viví la mejor experiencia para conocer la ciudad. Paseos tradicionales que recorren el Parque Nacional Nahuel Huapi de Norte a Sur en toda su inmensidad. Podrás visitar Bariloche, Villa La Angostira, San Martín de los Andes, Cerro Tronador, El Bolsón. Tambien podras navegar por el Lago Nahuel Huapi, que se caracteriza por su gran tamaño, su bello entorno y sus aguas cristalinas. Navegarlo es una de las actividades preferidas de quienes nos visitan y que permiten conocer la extraordinaria geografía y fauna a bordo de modernas embarcaciones. </h5>
-    </div>
-
-    <section class="container-fluid" >
-      <div class="row row-cols-1 row-cols-md-3 ">
-
-        <div class="col " id="card" data-aos="fade-right">
-          <div class="card shadow-lg" id="cardEx">
-            <div class="card-header text-center">
-              Cerro Tronador
-            </div>
-            <img src="images/tronador.jpg" class="card-img-top" id="cardEx" alt="cerrotronador">
-          </div>
-        </div>
-
-        <div class="col" id="card" data-aos="fade-up">
-          <div class="card shadow-lg" id="cardEx">
-            <div class="card-header text-center">
-              Ruta de los 7 Lagos
-            </div>
-            <img src="images/lagos.jpg" class="card-img-top" id="cardEx" alt="7lagos">
-          </div>
-        </div>
-
-        <div class="col" id="card">
-          <div class="card shadow-lg" id="cardEx" data-aos="fade-left">
-            <div class="card-header text-center">
-              Isla Victoria
-            </div>
-            <img src="images/victoria.jpg" class="card-img-top" id="cardEx" alt="islavictoria">            
-          </div>
-        </div>
-
+    <section class="container-xl">
+      <h2 class="text-center p-3 mt-4" id="h2">Actividades</h2>
+      <div class="mb-4" id="h5">
+      <p class="mb-5 pm">Contamos con excursiones, paseos y otras actividades turísticas para hacer en Bariloche. Viví la mejor experiencia para conocer la ciudad. Paseos tradicionales que recorren el Parque Nacional Nahuel Huapi de Norte a Sur en toda su inmensidad. Podrás visitar Bariloche, Villa La Angostira, San Martín de los Andes, Cerro Tronador, El Bolsón. Tambien podras navegar por el Lago Nahuel Huapi, que se caracteriza por su gran tamaño, su bello entorno y sus aguas cristalinas. Navegarlo es una de las actividades preferidas de quienes nos visitan y que permiten conocer la extraordinaria geografía y fauna a bordo de modernas embarcaciones. </h5>
       </div>
-      <div id="btnunits">
-        <a href="units.html" class="btn btn-outline-secondary btn-xl text-center mt-5" >Conoce todas nuestras Actividades</a>
-      </div>
+
+      <section class="container-fluid" >
+        <div class="row row-cols-1 row-cols-md-3 ">
+
+          <div class="col " id="card" data-aos="fade-right">
+            <div class="card shadow-lg" id="cardEx">
+              <div class="card-header text-center">
+                Cerro Otto
+              </div>
+              <img src="images/teleferico.jpg" class="card-img-top" id="cardEx" alt="cerrotronador">
+            </div>
+          </div>
+
+          <div class="col" id="card" data-aos="fade-up">
+            <div class="card shadow-lg" id="cardEx">
+              <div class="card-header text-center">
+                Ruta de los 7 Lagos
+              </div>
+              <img src="images/7lagos.jpg" class="card-img-top" id="cardEx" alt="7lagos">
+            </div>
+          </div>
+
+          <div class="col" id="card">
+            <div class="card shadow-lg" id="cardEx" data-aos="fade-left">
+              <div class="card-header text-center">
+                Rafting en el Rio Manso
+              </div>
+              <img src="images/rafting.jpg" class="card-img-top" id="cardEx" alt="islavictoria">            
+            </div>
+          </div>
+
+        </div>
+        <div id="btnunits">
+          <a href="activities.html" class="btn btn-outline-secondary btn-xl text-center mt-5" >Ver todas las Actividades</a>
+        </div>
+      </section>
     </section>
 
     <!----------CONTACTO-------->
