--- a/activities.html
+++ b/activities.html
@@ -79,7 +79,7 @@
             </div>
           </div>
       </div>
-      <h1 class="text-center mb-5">Excursiones y Actividades</h1>
+      <h1 class="text-center mb-5 titleActiv">Excursiones y Actividades</h1>
       <h2>Todas nuestras excursiones</h2>
     </section>
 
