--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   <a class="nav-link" href="units.html">Unidades</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#h22">Ubicacion</a>
+                  <a class="nav-link" href="ubicacion.html">Ubicacion</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="activities.html">Actividades</a>
