--- a/pages/units.html
+++ b/pages/units.html
@@ -88,7 +88,7 @@
 
                   <div class="col-sm-12 col-md-12 col-xl-6  mb-5"  id="carrouselCardis">  <!--col-->    
                       <div class="card shadow-lg" >  <!--card1-->
-                          <img src="/images/caba3.png" class="carrousel2" alt="">
+                          <img src="/images/caba3.jpg" class="carrousel2" alt="">
                           <div class="card-body">
                           <h4 class="card-title">Cabaña Nahuel</h4>
                           <a href="cabNahuel.html" class="btn btn-outline-secondary btn-sm col-6 ">Ver cabaña</a>
