--- a/pages/units.html
+++ b/pages/units.html
@@ -28,7 +28,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
                     <!--------------HEADER----------->
@@ -88,7 +88,7 @@
 
                   <div class="col-sm-12 col-md-12 col-xl-6  mb-5"  id="carrouselCardis">  <!--col-->    
                       <div class="card shadow-lg" >  <!--card1-->
-                          <img src="/images/caba3.jpg" class="carrousel2" alt="">
+                          <img src="../images/caba3.jpg" class="carrousel2" alt="">
                           <div class="card-body">
                           <h4 class="card-title">Cabaña Nahuel</h4>
                           <a href="cabNahuel.html" class="btn btn-outline-secondary btn-sm col-6 ">Ver cabaña</a>
@@ -100,7 +100,7 @@
                   <div class="col-sm-12 col-md-12 col-xl-6"  id="carrouselCardis2">  <!--col-->    
                       <div class="card shadow-lg" >  <!--card2-->
 
-                          <img src="/images/cabamain2.jpg" class="carrousel2" alt="">
+                          <img src="../images/cabamain2.jpg" class="carrousel2" alt="">
                           <div class="card-body">
                           <h4 class="card-title">Cabaña Moreno</h4>
                           <a href="cabMoreno.html" class="btn btn-outline-secondary btn-sm col-6 ">Ver cabaña</a>
