--- a/pages/units.html
+++ b/pages/units.html
@@ -17,7 +17,7 @@
     <meta name="twitter:image" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/images/imgtr2.jpg">
     <meta name="author" content="FrancoHoyos">
     <meta name="google-site-verification" content="DMAURegnRxkh1IY5CKc2OE4sdjQ60iccHPOP1sx3V2w" />
-    <link rel="icon" type="image/jpg" href="/images/favicon.ico">
+    <link rel="icon" type="image/jpg" href="../images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -118,7 +118,7 @@
                   <div class="col-sm-12 col-md-12 col-xl-6  mb-5"  id="carrouselCardis">  <!--col-->    
                       <div class="card shadow-lg" >  <!--card3-->
 
-                          <img src="/images/bungalow3.jpg" class="carrousel2" alt="">
+                          <img src="../images/bungalow3.jpg" class="carrousel2" alt="">
 
                           <div class="card-body">
                           <h4 class="card-title">Bungalow Mascardi</h4>
@@ -131,7 +131,7 @@
                   <div class="col-sm-12 col-md-12 col-xl-6"  id="carrouselCardis2">  <!--col-->    
                       <div class="card shadow-lg" >  <!--card4-->
 
-                        <img src="/images/bungalowmain2.jpg" class="carrousel2" alt="">
+                        <img src="../images/bungalowmain2.jpg" class="carrousel2" alt="">
                       
                           <div class="card-body">
                           <h4 class="card-title">Bungalow Gutierrez</h4>
@@ -152,7 +152,7 @@
                   <div class="col-sm-12 col-md-12 col-xl-6  mb-5"  id="carrouselCardis">  <!--col-->    
                       <div class="card shadow-lg" >  <!--card3-->
 
-                          <img src="/images/modernmain2.jpg" class="carrousel2" alt="">
+                          <img src="../images/modernmain2.jpg" class="carrousel2" alt="">
 
                           <div class="card-body">
                           <h4 class="card-title">Casa Catedral</h4>
@@ -165,7 +165,7 @@
                   <div class="col-sm-12 col-md-12 col-xl-6"  id="carrouselCardis2">  <!--col-->    
                       <div class="card shadow-lg" >  <!--card4-->
 
-                          <img src="/images/modern2.jpg" class="carrousel2" alt="">
+                          <img src="../images/modern2.jpg" class="carrousel2" alt="">
 
                           <div class="card-body">
                           <h4 class="card-title">Casa Meliquina</h4>
