--- a/pages/casaCatedral.html
+++ b/pages/casaCatedral.html
@@ -11,13 +11,13 @@
         <meta property="og:title" content="Cabañas Casa de Piedra Bariloche">
         <meta property="og:description" content="Alquila tu cabaña en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques y los lagos">
         <meta property="og:url" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/">
-        <meta property="og:image" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/images/imgtr2.jpg">
+        <meta property="og:image" content="https://vgnfran.github.io/PreEntrega2HoyosFranco../images/imgtr2.jpg">
         <meta name="twitter:title" content="Cabañas Casa de Piedra Bariloche">
         <meta name="twitter:description" content="Alquila tu cabaña en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques y los lagos">
-        <meta name="twitter:image" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/images/imgtr2.jpg">
+        <meta name="twitter:image" content="https://vgnfran.github.io/PreEntrega2HoyosFranco../images/imgtr2.jpg">
         <meta name="author" content="FrancoHoyos">
         <meta name="google-site-verification" content="DMAURegnRxkh1IY5CKc2OE4sdjQ60iccHPOP1sx3V2w" />
-        <link rel="icon" type="image/jpg" href="/images/favicon.ico">
+        <link rel="icon" type="image/jpg" href="../images/favicon.ico">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -28,7 +28,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap" rel="stylesheet">
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="/css/styles.css">
+        <link rel="stylesheet" href="../css/styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
     
     </head>
@@ -36,7 +36,7 @@
     <header>
         <nav class="navbar  navbar-expand-lg navbar-ligth bg-ligth ml-auto "  >
             <div class="container"  >
-             <a class="navbar-brand" href="#" aria-label="Redireccion al inicio"><img src="/images/iconMount.png" id="iconmont" alt="iconoMontaña"></a>
+             <a class="navbar-brand" href="#" aria-label="Redireccion al inicio"><img src="../images/iconMount.png" id="iconmont" alt="iconoMontaña"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -70,13 +70,13 @@
             <div id="carouselExampleControlsM" class="carousel slide" data-bs-ride="carousel"> <!--carrousel-->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="/images/catedral3.jpg" class="d-block w-100" alt="...">
+                        <img src="../images/catedral3.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="/images/catedral2.jpg" class="d-block w-100" alt="...">
+                        <img src="../images/catedral2.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="/images/catedral1.jpg" class="d-block w-100" alt="...">
+                        <img src="../images/catedral1.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsM" data-bs-slide="prev">
@@ -96,17 +96,17 @@
 
         <section class="text-center mt-5 icons">
             <div class="mb-5">
-                <img src="/images/persons.png" class="mb-2" alt="">
+                <img src="../images/persons.png" class="mb-2" alt="">
                 <h2 class="h2"><b>10</b></h2>
                 <h3 class="h3">Hasta 10 Personas.</h3>
             </div>
             <div class="mb-5">
-                <img src="/images/flat.png" class="mb-2" alt="">
+                <img src="../images/flat.png" class="mb-2" alt="">
                 <h2 class="h2"><b>160 m2</b></h2>
                 <h3 class="h3">Metros Cuadrados.</h3>
             </div>
             <div class="mb-5">
-                <img src="/images/bed.png" class="mb-2" alt="">
+                <img src="../images/bed.png" class="mb-2" alt="">
                 <h2 class="h2"><b>$18.000</b></h2>
                 <h3 class="h3">Tarifa por noche</h3>
             </div>
@@ -122,71 +122,71 @@
             <div class="services">
                 <div class="colum mb-4">
                     <div class="infor">
-                        <img src="/images/check.png" alt="">
+                        <img src="../images/check.png" alt="">
                         <p>Servicio de Wifi</p>
                     </div>
                     <div class="infor">
-                        <img src="/images/check.png" alt="">
+                        <img src="../images/check.png" alt="">
                         <p>Desayuno incluido</p>
                     </div>
                     <div class="infor">
-                        <img src="/images/check.png" alt="">
+                        <img src="../images/check.png" alt="">
                         <p>Servico de ropa blanca</p>
                     </div>
                     <div class="infor">
-                        <img src="/images/check.png" alt="">
+                        <img src="../images/check.png" alt="">
                         <p>Tv con DirecTV</p>
                     </div>
                     <div class="infor">
-                        <img src="/images/check.png" alt="">
+                        <img src="../images/check.png" alt="">
                         <p>Cocina totalmente equipada</p>
                     </div>
                 </div>
                 <div class="colum mb-4">
                     <div class="infor">
-                        <img src="/images/check.png" alt="">
+                        <img src="../images/check.png" alt="">
                         <p>2 baños con bañera de hidromasajes</p>
                     </div>
                     <div class="infor">
-                        <img src="/images/check.png" alt="">
+                        <img src="../images/check.png" alt="">
                         <p>Baño en suite</p>
                     </div>
                     <div class="infor">
-                        <img src="/images/check.png" alt="">
+                        <img src="../images/check.png" alt="">
                         <p>Habitaciones con cama King size</p>
                     </div>
                     <div class="infor">
-                        <img src="/images/check.png" alt="">
+                        <img src="../images/check.png" alt="">
                         <p>Habitaciones alfombradas y con ropero</p>
                     </div>
                     <div class="infor">
-                        <img src="/images/check.png" alt="">
+                        <img src="../images/check.png" alt="">
                         <p>Loza radiante de 8 circuitos individuales</p>
                     </div>
                     <div class="infor">
-                        <img src="/images/check.png" alt="">
+                        <img src="../images/check.png" alt="">
                         <p>Jardin arbolado con plantas de la zona</p>
                     </div>
                 </div>
                 <div class="colum mb-5">
                     <div class="infor">
-                        <img src="/images/check.png" alt="">
+                        <img src="../images/check.png" alt="">
                         <p>Aire acondicionado</p>
                     </div>
                     <div class="infor">
-                        <img src="/images/check.png" alt="">
+                        <img src="../images/check.png" alt="">
                         <p>Chimenea interior</p>
                     </div>
                     <div class="infor">
-                        <img src="/images/check.png" alt="">
+                        <img src="../images/check.png" alt="">
                         <p>Quincho propio con comedor y parrilla</p>
                     </div>
                     <div class="infor">
-                        <img src="/images/check.png" alt="">
+                        <img src="../images/check.png" alt="">
                         <p>Servicio de limpieza diario</p>
                     </div>
                     <div class="infor">
-                        <img src="/images/check.png" alt="">
+                        <img src="../images/check.png" alt="">
                         <p>Estacionamiento individual</p>
                     </div>
                 </div>
