--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,13 +11,13 @@
     <meta property="og:title" content="Cabañas Casa de Piedra Bariloche">
     <meta property="og:description" content="Alquila tu cabaña en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques y los lagos">
     <meta property="og:url" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/">
-    <meta property="og:image" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/images/imgtr2.jpg">
+    <meta property="og:image" content="https://vgnfran.github.io/PreEntrega2HoyosFranco../images/imgtr2.jpg">
     <meta name="twitter:title" content="Cabañas Casa de Piedra Bariloche">
     <meta name="twitter:description" content="Alquila tu cabaña en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques y los lagos">
-    <meta name="twitter:image" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/images/imgtr2.jpg">
+    <meta name="twitter:image" content="https://vgnfran.github.io/PreEntrega2HoyosFranco../images/imgtr2.jpg">
     <meta name="author" content="FrancoHoyos">
     <meta name="google-site-verification" content="DMAURegnRxkh1IY5CKc2OE4sdjQ60iccHPOP1sx3V2w" />
-    <link rel="icon" type="image/jpg" href="/images/favicon.ico">
+    <link rel="icon" type="image/jpg" href="../images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -28,14 +28,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
                     <!--------------HEADER----------->
     <header>
         <nav class="navbar  navbar-expand-lg navbar-ligth bg-ligth ml-auto "  >
             <div class="container"  >
-             <a class="navbar-brand" href="#" aria-label="Redireccion al inicio"><img src="/images/iconMount.png" id="iconmont" alt="iconoMontaña"></a>
+             <a class="navbar-brand" href="#" aria-label="Redireccion al inicio"><img src="../images/iconMount.png" id="iconmont" alt="iconoMontaña"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -66,7 +66,7 @@
     <head>
         <section class="container-xxl xlContacto">
             <div class="contContact">
-                <img src="/images/ubicacionBg.jpg" alt="">
+                <img src="../images/ubicacionBg.jpg" alt="">
                 <h1 class="titleContact">Contacto</h1>
                 <p>Te invitamos a que nos contactes para realizar una reserva o por cualquier consulta, envienos sus dudas o solicitud de reserva y nos pondremos en contacto con usted a la brevedad. </p>
             </div>
