--- a/pages/units.html
+++ b/pages/units.html
@@ -11,13 +11,13 @@
     <meta property="og:title" content="Cabañas Casa de Piedra Bariloche">
     <meta property="og:description" content="Alquila tu cabaña en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques y los lagos">
     <meta property="og:url" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/">
-    <meta property="og:image" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/images/imgtr2.jpg">
+    <meta property="og:image" content="https://vgnfran.github.io/PreEntrega2HoyosFranco../images/imgtr2.jpg">
     <meta name="twitter:title" content="Cabañas Casa de Piedra Bariloche">
     <meta name="twitter:description" content="Alquila tu cabaña en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques y los lagos">
-    <meta name="twitter:image" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/images/imgtr2.jpg">
+    <meta name="twitter:image" content="https://vgnfran.github.io/PreEntrega2HoyosFranco../images/imgtr2.jpg">
     <meta name="author" content="FrancoHoyos">
     <meta name="google-site-verification" content="DMAURegnRxkh1IY5CKc2OE4sdjQ60iccHPOP1sx3V2w" />
-    <link rel="icon" type="image/jpg" href="../images/favicon.ico">
+    <link rel="icon" type="image/jpg" href="..../images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -35,7 +35,7 @@
     <header>
         <nav class="navbar  navbar-expand-lg navbar-ligth bg-ligth ml-auto "  >
             <div class="container"  >
-             <a class="navbar-brand" href="#" aria-label="Redireccion al inicio"><img src="../images/iconMount.png" id="iconmont" alt="iconoMontaña"></a>
+             <a class="navbar-brand" href="#" aria-label="Redireccion al inicio"><img src="..../images/iconMount.png" id="iconmont" alt="iconoMontaña"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -66,7 +66,7 @@
     <main>
        <section class="container-xxl contUnits text-center">
           <div class="bgUnits ">
-            <!-- <img src="/images/ubicacionBg.jpg" class="img-fluid" alt=""> -->
+            <!-- <img src="../images/ubicacionBg.jpg" class="img-fluid" alt=""> -->
           </div>
                             <!--titles-->
           <h1 class="display-5 text-center mb-3 mt-5">Nuestros Alojamientos</h2>
@@ -88,7 +88,7 @@
 
                   <div class="col-sm-12 col-md-12 col-xl-6  mb-5"  id="carrouselCardis">  <!--col-->    
                       <div class="card shadow-lg" >  <!--card1-->
-                          <img src="../images/caba3.jpg" class="carrousel2" alt="">
+                          <img src="..../images/caba3.jpg" class="carrousel2" alt="">
                           <div class="card-body">
                           <h4 class="card-title">Cabaña Nahuel</h4>
                           <a href="cabNahuel.html" class="btn btn-outline-secondary btn-sm col-6 ">Ver cabaña</a>
@@ -100,7 +100,7 @@
                   <div class="col-sm-12 col-md-12 col-xl-6"  id="carrouselCardis2">  <!--col-->    
                       <div class="card shadow-lg" >  <!--card2-->
 
-                          <img src="../images/cabamain2.jpg" class="carrousel2" alt="">
+                          <img src="..../images/cabamain2.jpg" class="carrousel2" alt="">
                           <div class="card-body">
                           <h4 class="card-title">Cabaña Moreno</h4>
                           <a href="cabMoreno.html" class="btn btn-outline-secondary btn-sm col-6 ">Ver cabaña</a>
@@ -118,7 +118,7 @@
                   <div class="col-sm-12 col-md-12 col-xl-6  mb-5"  id="carrouselCardis">  <!--col-->    
                       <div class="card shadow-lg" >  <!--card3-->
 
-                          <img src="../images/bungalow3.jpg" class="carrousel2" alt="">
+                          <img src="..../images/bungalow3.jpg" class="carrousel2" alt="">
 
                           <div class="card-body">
                           <h4 class="card-title">Bungalow Mascardi</h4>
@@ -131,7 +131,7 @@
                   <div class="col-sm-12 col-md-12 col-xl-6"  id="carrouselCardis2">  <!--col-->    
                       <div class="card shadow-lg" >  <!--card4-->
 
-                        <img src="../images/bungalowmain2.jpg" class="carrousel2" alt="">
+                        <img src="..../images/bungalowmain2.jpg" class="carrousel2" alt="">
                       
                           <div class="card-body">
                           <h4 class="card-title">Bungalow Gutierrez</h4>
@@ -152,7 +152,7 @@
                   <div class="col-sm-12 col-md-12 col-xl-6  mb-5"  id="carrouselCardis">  <!--col-->    
                       <div class="card shadow-lg" >  <!--card3-->
 
-                          <img src="../images/modernmain2.jpg" class="carrousel2" alt="">
+                          <img src="..../images/modernmain2.jpg" class="carrousel2" alt="">
 
                           <div class="card-body">
                           <h4 class="card-title">Casa Catedral</h4>
@@ -165,7 +165,7 @@
                   <div class="col-sm-12 col-md-12 col-xl-6"  id="carrouselCardis2">  <!--col-->    
                       <div class="card shadow-lg" >  <!--card4-->
 
-                          <img src="../images/modern2.jpg" class="carrousel2" alt="">
+                          <img src="..../images/modern2.jpg" class="carrousel2" alt="">
 
                           <div class="card-body">
                           <h4 class="card-title">Casa Meliquina</h4>
