--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto | Casa de Piedra</title>
+    <title>Contacto | Reservas | Casa de Piedra</title>
     <meta name="description" content="Cabañas en alquiler - Cabañas en Bariloche - Contrata tus excursiones - Reserva tus vacaciones - Descansar en el sur - Veni a conocer la Patagonia Argentina">
     <meta name="keywords" content="cabaña,alquiler,vuelos,vacaciones,turismo,excursiones,bariloche,viajes,patagonia,sur,nieve,bosque,lagos">
     <meta property="og:type" content="article">
@@ -79,7 +79,7 @@
       <div class="row">
 
         <div class="col-sm-12" data-aos="fade-right">
-          <p class="text-center pm mb-4" id="h2Contact">Completa el formulario y nos pondremos en contacto con vos.<p>
+          <h3 class="text-center pm mb-4" id="h2Contact">Completa el formulario y nos pondremos en contacto con vos.<h3>
           <div class="card shadow-lg">
             <div class="card-body">
 
@@ -196,7 +196,7 @@
         </div>
 
         <div class="col-sm-12" data-aos="fade-left">
-          <h2 class="text-center mt-5 mb-4" id="h2Contact">¿Ya reservaste? Completar para conocer el estado de tu reserva.</h2>
+          <h3 class="text-center mt-5 mb-4" id="h2Contact">¿Ya reservaste? Completar para conocer el estado de tu reserva.</h3>
           <div class="card shadow-lg">
             <div class="card-body">
 
