--- a/pages/bungGutierrez.html
+++ b/pages/bungGutierrez.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Bungalows | Bungalow Mascardi</title>
+        <title>Bungalows. | Bungalow Mascardi</title>
         <meta name="description" content="Cabañas en alquiler - Cabañas en Bariloche - Contrata tus excursiones - Reserva tus vacaciones - Descansar en el sur - Veni a conocer la Patagonia Argentina">
         <meta name="keywords" content="cabaña,alquiler,vuelos,vacaciones,turismo,excursiones,bariloche,viajes,patagonia,sur,nieve,bosque,lagos">
         <meta property="og:type" content="article"> 
@@ -70,10 +70,10 @@
             <div id="carouselExampleControlsM" class="carousel slide" data-bs-ride="carousel"> <!--carrousel-->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../images/bung2.jpg" class="d-block w-100" alt="...">
+                        <img src="../images/bung1.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="../images/bung1.jpg" class="d-block w-100" alt="...">
+                        <img src="../images/bung2.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsM" data-bs-slide="prev">
@@ -188,7 +188,7 @@
 
         <section class="text-center">
             <h3 class="h3 text-center mt-4">Realice su reserva para el Bungalow Moreno</h3>
-            <a href="#" class="btn btn-outline-secondary btn-xl mt-3">Reservar ahora</a>
+            <a href="pages/contact.html" class="btn btn-outline-secondary btn-xl mt-3">Reservar ahora</a>
         </section>
     </main>
 
