--- a/pages/bungMascardi.html
+++ b/pages/bungMascardi.html
@@ -188,7 +188,7 @@
 
         <section class="text-center">
             <h3 class="h3 text-center mt-4">Realice su reserva para el Bungalow Moreno</h3>
-            <a href="#" class="btn btn-outline-secondary btn-xl mt-3">Reservar ahora</a>
+            <a href="contact.html" class="btn btn-outline-secondary btn-xl mt-3">Reservar ahora</a>
         </section>
     </main>
 
