seo: meta name twitter

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <meta property="og:title" content="Cabañas Casa de Piedra Bariloche">
     <meta property="og:description" content="Alquila tu cabaña en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques y los lagos">
     <meta property="og:url" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/">
-    <meta property="og:image" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/images/imgtr2.jpg">
+    <meta property="og:image" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/images/imgtr2.jpg">
     <meta name="twitter:title" content="Cabañas Casa de Piedra Bariloche">
     <meta name="twitter:description" content="Alquila tu cabaña en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques y los lagos">
-    <meta name="twitter:image" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/images/imgtr2.jpg">
+    <meta name="twitter:image" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/images/imgtr2.jpg">
     <meta name="author" content="FrancoHoyos">
     <meta name="google-site-verification" content="DMAURegnRxkh1IY5CKc2OE4sdjQ60iccHPOP1sx3V2w" />
     <link rel="icon" type="image/jpg" href="images/favicon.ico">
@@ -105,7 +105,7 @@
         <div class="row">
           <div class="col-md-4 col-xl-4 mb-4" id="card" data-aos="fade-right">
             <div class="card shadow-lg" >
-              <img src="images/cabamain.jpg" id="carrouselCard" alt="">
+              <img src="images/cabamain.jpg" id="carrouselCard" alt="cabañapreview">
               <div class="card-body">
                 <h3 class="card-title text-center">Cabañas</h3>
                 </div>
@@ -142,7 +142,7 @@
 
           <div class="col-md-4 col-xl-4" id="card2">
             <div class="card shadow-lg mb-4 " id="card" data-aos="fade-up">
-              <img src="images/bungalowmain.jpg" id="carrouselCard" alt="">
+              <img src="images/bungalowmain.jpg" id="carrouselCard" alt="bungalowpreview">
               <div class="card-body">
                 <h3 class="card-title text-center">Bungalows</h3>
               </div>
@@ -181,7 +181,7 @@
 
           <div class="col-md-4 col-xl-4" id="card" data-aos="fade-left" data-aos-duration="500">
             <div class="card shadow-lg mb-4 " >
-              <img src="images/modernmain.jpg" id="carrouselCard"alt="">
+              <img src="images/modernmain.jpg" id="carrouselCard"alt="casapreview">
               <div class="card-body">
                 <h3 class="card-title text-center">Casas Modernas</h3>
               </div>
@@ -233,7 +233,7 @@
               <div class="card-header text-center">
                 Cerro Otto
               </div>
-              <img src="images/teleferico.jpg" class="card-img-top" id="cardEx" alt="cerrotronador">
+              <img src="images/teleferico.jpg" class="card-img-top" id="cardEx" alt="telefericoOtto">
             </div>
           </div>
 
@@ -251,7 +251,7 @@
               <div class="card-header text-center">
                 Rafting en el Rio Manso
               </div>
-              <img src="images/rafting.jpg" class="card-img-top" id="cardEx" alt="islavictoria">            
+              <img src="images/rafting.jpg" class="card-img-top" id="cardEx" alt="rafting">            
             </div>
           </div>
 
