--- a/pages/casaMeliquina.html
+++ b/pages/casaMeliquina.html
@@ -11,10 +11,10 @@
         <meta property="og:title" content="Cabañas Casa de Piedra Bariloche">
         <meta property="og:description" content="Alquila tu cabaña en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques y los lagos">
         <meta property="og:url" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/">
-        <meta property="og:image" content="https://vgnfran.github.io/PreEntrega2HoyosFranco../images/imgtr2.jpg">
+        <meta property="og:image" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/images/imgtr2.jpg">
         <meta name="twitter:title" content="Cabañas Casa de Piedra Bariloche">
         <meta name="twitter:description" content="Alquila tu cabaña en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques y los lagos">
-        <meta name="twitter:image" content="https://vgnfran.github.io/PreEntrega2HoyosFranco../images/imgtr2.jpg">
+        <meta name="twitter:image" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/images/imgtr2.jpg">
         <meta name="author" content="FrancoHoyos">
         <meta name="google-site-verification" content="DMAURegnRxkh1IY5CKc2OE4sdjQ60iccHPOP1sx3V2w" />
         <link rel="icon" type="image/jpg" href="../images/favicon.ico">
