--- a/pages/casaCatedral.html
+++ b/pages/casaCatedral.html
@@ -70,13 +70,13 @@
             <div id="carouselExampleControlsM" class="carousel slide" data-bs-ride="carousel"> <!--carrousel-->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../images/catedral3.jpg" class="d-block w-100" alt="...">
+                        <img src="../images/catedral3.jpg" class="d-block w-100" alt="interiorCasa">
                     </div>
                     <div class="carousel-item">
-                        <img src="../images/catedral2.jpg" class="d-block w-100" alt="...">
+                        <img src="../images/catedral2.jpg" class="d-block w-100" alt="interiorCasa">
                     </div>
                     <div class="carousel-item">
-                        <img src="../images/catedral1.jpg" class="d-block w-100" alt="...">
+                        <img src="../images/catedral1.jpg" class="d-block w-100" alt="interiorCasa">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsM" data-bs-slide="prev">
@@ -96,17 +96,17 @@
 
         <section class="text-center mt-5 icons">
             <div class="mb-5">
-                <img src="../images/persons.png" class="mb-2" alt="">
+                <img src="../images/persons.png" class="mb-2" alt="iconoPersonas">
                 <h2 class="h2"><b>10</b></h2>
                 <h3 class="h3">Hasta 10 Personas.</h3>
             </div>
             <div class="mb-5">
-                <img src="../images/flat.png" class="mb-2" alt="">
+                <img src="../images/flat.png" class="mb-2" alt="iconoMetros">
                 <h2 class="h2"><b>160 m2</b></h2>
                 <h3 class="h3">Metros Cuadrados.</h3>
             </div>
             <div class="mb-5">
-                <img src="../images/bed.png" class="mb-2" alt="">
+                <img src="../images/bed.png" class="mb-2" alt="iconoCama">
                 <h2 class="h2"><b>$18.000</b></h2>
                 <h3 class="h3">Tarifa por noche</h3>
             </div>
@@ -122,71 +122,71 @@
             <div class="services">
                 <div class="colum mb-4">
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Servicio de Wifi</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Desayuno incluido</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Servico de ropa blanca</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Tv con DirecTV</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Cocina totalmente equipada</p>
                     </div>
                 </div>
                 <div class="colum mb-4">
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>2 baños con bañera de hidromasajes</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Baño en suite</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Habitaciones con cama King size</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Habitaciones alfombradas y con ropero</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Loza radiante de 8 circuitos individuales</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Jardin arbolado con plantas de la zona</p>
                     </div>
                 </div>
                 <div class="colum mb-5">
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Aire acondicionado</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Chimenea interior</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Quincho propio con comedor y parrilla</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Servicio de limpieza diario</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Estacionamiento individual</p>
                     </div>
                 </div>
