--- a/pages/contact.html
+++ b/pages/contact.html
@@ -66,7 +66,7 @@
     <head>
         <section class="container-xxl xlContacto">
             <div class="contContact">
-                <img src="../images/ubicacionBg.jpg" alt="">
+                <img src="../images/ubicacionBg.jpg" alt="fondoContacto">
                 <h1 class="titleContact">Contacto</h1>
                 <p>Te invitamos a que nos contactes para realizar una reserva o por cualquier consulta, envienos sus dudas o solicitud de reserva y nos pondremos en contacto con usted a la brevedad. </p>
             </div>
