--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -67,7 +67,7 @@
     <head>
         <section class="contUbi">
             <div class="bgUbi">
-                <img src="../images/ubiHead.jpg" alt="">
+                <img src="../images/ubiHead.jpg" alt="fondoUbicacion">
             </div>
             <h1>¿Donde nos Encontramos?</h1>
             <p>Casa de Piedra se encuentra en Villa Llao Llao, San Carlos de Bariloche en el kilómetro 13,8 de la Avenida Bustillo. El predio de 6 hectáreas que rodea al complejo se encuentra a orillas del lago Nahuel Huapi y está conformado por un bosque centenarios de cipreses y coihues.</p>
