--- a/pages/units.html
+++ b/pages/units.html
@@ -88,7 +88,7 @@
 
                   <div class="col-sm-12 col-md-12 col-xl-6  mb-5"  id="carrouselCardis">  <!--col-->    
                       <div class="card shadow-lg" >  <!--card1-->
-                          <img src="../images/caba3.jpg" class="carrousel2" alt="">
+                          <img src="../images/caba3.jpg" class="carrousel2" alt="cabañaNahuel">
                           <div class="card-body">
                           <h4 class="card-title">Cabaña Nahuel</h4>
                           <a href="cabNahuel.html" class="btn btn-outline-secondary btn-sm col-6 ">Ver cabaña</a>
@@ -100,7 +100,7 @@
                   <div class="col-sm-12 col-md-12 col-xl-6"  id="carrouselCardis2">  <!--col-->    
                       <div class="card shadow-lg" >  <!--card2-->
 
-                          <img src="../images/cabamain2.jpg" class="carrousel2" alt="">
+                          <img src="../images/cabamain2.jpg" class="carrousel2" alt="cabañaMoreno">
                           <div class="card-body">
                           <h4 class="card-title">Cabaña Moreno</h4>
                           <a href="cabMoreno.html" class="btn btn-outline-secondary btn-sm col-6 ">Ver cabaña</a>
@@ -118,7 +118,7 @@
                   <div class="col-sm-12 col-md-12 col-xl-6  mb-5"  id="carrouselCardis">  <!--col-->    
                       <div class="card shadow-lg" >  <!--card3-->
 
-                          <img src="../images/bungalow3.jpg" class="carrousel2" alt="">
+                          <img src="../images/bungalow3.jpg" class="carrousel2" alt="bungalowMascardi">
 
                           <div class="card-body">
                           <h4 class="card-title">Bungalow Mascardi</h4>
@@ -131,7 +131,7 @@
                   <div class="col-sm-12 col-md-12 col-xl-6"  id="carrouselCardis2">  <!--col-->    
                       <div class="card shadow-lg" >  <!--card4-->
 
-                        <img src="../images/bungalowmain2.jpg" class="carrousel2" alt="">
+                        <img src="../images/bungalowmain2.jpg" class="carrousel2" alt="bungalowGutierrez">
                       
                           <div class="card-body">
                           <h4 class="card-title">Bungalow Gutierrez</h4>
@@ -152,7 +152,7 @@
                   <div class="col-sm-12 col-md-12 col-xl-6  mb-5"  id="carrouselCardis">  <!--col-->    
                       <div class="card shadow-lg" >  <!--card3-->
 
-                          <img src="../images/modernmain2.jpg" class="carrousel2" alt="">
+                          <img src="../images/modernmain2.jpg" class="carrousel2" alt="casaCatedral">
 
                           <div class="card-body">
                           <h4 class="card-title">Casa Catedral</h4>
@@ -165,7 +165,7 @@
                   <div class="col-sm-12 col-md-12 col-xl-6"  id="carrouselCardis2">  <!--col-->    
                       <div class="card shadow-lg" >  <!--card4-->
 
-                          <img src="../images/modern2.jpg" class="carrousel2" alt="">
+                          <img src="../images/modern2.jpg" class="carrousel2" alt="casaMeliquina">
 
                           <div class="card-body">
                           <h4 class="card-title">Casa Meliquina</h4>
