--- a/pages/bungGutierrez.html
+++ b/pages/bungGutierrez.html
@@ -69,10 +69,10 @@
             <div id="carouselExampleControlsM" class="carousel slide" data-bs-ride="carousel"> <!--carrousel-->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../images/bung1.jpg" class="d-block w-100" alt="...">
+                        <img src="../images/bung1.jpg" class="d-block w-100" alt="bungalow1">
                     </div>
                     <div class="carousel-item">
-                        <img src="../images/bung2.jpg" class="d-block w-100" alt="...">
+                        <img src="../images/bung2.jpg" class="d-block w-100" alt="bungalow2">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsM" data-bs-slide="prev">
@@ -92,17 +92,17 @@
 
         <section class="text-center mt-5 icons">
             <div class="mb-5">
-                <img src="../images/persons.png" class="mb-2" alt="">
+                <img src="../images/persons.png" class="mb-2" alt="iconoPersonas">
                 <h2 class="h2"><b>7</b></h2>
                 <h3 class="h3">Hasta 7 Personas.</h3>
             </div>
             <div class="mb-5">
-                <img src="../images/flat.png" class="mb-2" alt="">
+                <img src="../images/flat.png" class="mb-2" alt="iconoMetrosCuadrados">
                 <h2 class="h2"><b>96 m2</b></h2>
                 <h3 class="h3">Metros Cuadrados.</h3>
             </div>
             <div class="mb-5">
-                <img src="../images/bed.png" class="mb-2" alt="">
+                <img src="../images/bed.png" class="mb-2" alt="iconoCama">
                 <h2 class="h2"><b>$14.000</b></h2>
                 <h3 class="h3">Tarifa por noche</h3>
             </div>
@@ -118,67 +118,67 @@
             <div class="services">
                 <div class="colum mb-4">
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Servicio de Wifi</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Desayuno incluido</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Servicio de ropa blanca</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Tv por cable</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Cocina totalmente equipada</p>
                     </div>
                 </div>
                 <div class="colum mb-4">
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Amplio baño principal con hidromasajes</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Dormitorios con ropero integrado y maletero</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Habitacion con cama King</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Dormitorios alfombrados</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Piso radiante</p>
                     </div>
                 </div>
                 <div class="colum mb-5">
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Aire acondicionado</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Estufa a pellets</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Obsequio de bienvenida</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Servicio de limpieza diario</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Estacionamiento individual</p>
                     </div>
                 </div>
