--- a/pages/bungMascardi.html
+++ b/pages/bungMascardi.html
@@ -70,10 +70,10 @@
             <div id="carouselExampleControlsM" class="carousel slide" data-bs-ride="carousel"> <!--carrousel-->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../images/bung3.jpg" class="d-block w-100" alt="...">
+                        <img src="../images/bung3.jpg" class="d-block w-100" alt="iconoCheck">
                     </div>
                     <div class="carousel-item">
-                        <img src="../images/bung4.jpg" class="d-block w-100" alt="...">
+                        <img src="../images/bung4.jpg" class="d-block w-100" alt="iconoCheck">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsM" data-bs-slide="prev">
@@ -93,17 +93,17 @@
 
         <section class="text-center mt-5 icons">
             <div class="mb-5">
-                <img src="../images/persons.png" class="mb-2" alt="">
+                <img src="../images/persons.png" class="mb-2" alt="iconoPersonas">
                 <h2 class="h2"><b>4</b></h2>
                 <h3 class="h3">Hasta 4 Personas.</h3>
             </div>
             <div class="mb-5">
-                <img src="../images/flat.png" class="mb-2" alt="">
+                <img src="../images/flat.png" class="mb-2" alt="iconoMetros">
                 <h2 class="h2"><b>80 m2</b></h2>
                 <h3 class="h3">Metros Cuadrados.</h3>
             </div>
             <div class="mb-5">
-                <img src="../images/bed.png" class="mb-2" alt="">
+                <img src="../images/bed.png" class="mb-2" alt="iconoCama">
                 <h2 class="h2"><b>$12.000</b></h2>
                 <h3 class="h3">Tarifa por noche</h3>
             </div>
@@ -119,67 +119,67 @@
             <div class="services">
                 <div class="colum mb-4">
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Servicio de Wifi</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Desayuno incluido</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Servico de ropa blanca</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Tv por cable</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Cocina totalmente equipada</p>
                     </div>
                 </div>
                 <div class="colum mb-4">
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Baño con bañera de hidromasaje</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Dormitorio con ropero integrado</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Habitacion con cama King</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Dormitorio alfombrado</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Piso radiante</p>
                     </div>
                 </div>
                 <div class="colum mb-5">
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Aire acondicionado</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Caja de seguridad</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Deck exterior con parrilla</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Servicio de limpieza diario</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Estacionamiento individual</p>
                     </div>
                 </div>
