--- a/pages/cabMoreno.html
+++ b/pages/cabMoreno.html
@@ -14,7 +14,7 @@
         <meta property="og:image" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/images/imgtr2.jpg">
         <meta name="twitter:title" content="Cabañas Casa de Piedra Bariloche">
         <meta name="twitter:description" content="Alquila tu cabaña en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques y los lagos">
-        <meta name="twitter:image" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/images/imgtr2.jpgg">
+        <meta name="twitter:image" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/images/imgtr2.jpg">
         <meta name="author" content="FrancoHoyos">
         <meta name="google-site-verification" content="DMAURegnRxkh1IY5CKc2OE4sdjQ60iccHPOP1sx3V2w" />
         <link rel="icon" type="image/jpg" href="../images/favicon.ico">
@@ -70,10 +70,10 @@
             <div id="carouselExampleControlsM" class="carousel slide" data-bs-ride="carousel"> <!--carrousel-->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../images/interiorcab2.jpg" class="d-block w-100" alt="...">
+                        <img src="../images/interiorcab2.jpg" class="d-block w-100" alt="interiorCabaña">
                     </div>
                     <div class="carousel-item">
-                        <img src="../images/interiorcab2.2.jpg" class="d-block w-100" alt="...">
+                        <img src="../images/interiorcab2.2.jpg" class="d-block w-100" alt="interiorCabaña">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsM" data-bs-slide="prev">
@@ -93,17 +93,17 @@
 
         <section class="text-center mt-5 icons">
             <div class="mb-5">
-                <img src="../images/persons.png" class="mb-2" alt="">
+                <img src="../images/persons.png" class="mb-2" alt="iconoPersonas">
                 <h2 class="h2"><b>6</b></h2>
                 <h3 class="h3">Hasta 6 Personas.</h3>
             </div>
             <div class="mb-5">
-                <img src="../images/flat.png" class="mb-2" alt="">
+                <img src="../images/flat.png" class="mb-2" alt="iconoMetros">
                 <h2 class="h2"><b>70 m2</b></h2>
                 <h3 class="h3">Metros Cuadrados.</h3>
             </div>
             <div class="mb-5">
-                <img src="../images/bed.png" class="mb-2" alt="">
+                <img src="../images/bed.png" class="mb-2" alt="iconoCama">
                 <h2 class="h2"><b>$10.000</b></h2>
                 <h3 class="h3">Tarifa por noche</h3>
             </div>
@@ -119,63 +119,63 @@
             <div class="services">
                 <div class="colum mb-4">
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Servicio de Wifi</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Desayuno incluido</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Servico de ropa blanca</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Tv por cable</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Cocina totalmente equipada</p>
                     </div>
                 </div>
                 <div class="colum mb-4">
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Baño con bañera de hidromasaje</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Amplio dormitorio</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Habitacion con 2 camas singles</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Calefaccion y agua caliente</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Sector con parrila y asador</p>
                     </div>
                 </div>
                 <div class="colum mb-5">
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Aire acondicionado</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Caja fuerte</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Deck exterior</p>
                     </div>
                     <div class="infor">
-                        <img src="../images/check.png" alt="">
+                        <img src="../images/check.png" alt="iconoCheck">
                         <p>Estacionamiento individual</p>
                     </div>
                 </div>
