href button units

--- a/pages/cabMoreno.html
+++ b/pages/cabMoreno.html
@@ -184,7 +184,7 @@
 
         <section class="text-center">
             <h3 class="h3 text-center mt-4">Realice su reserva para la cabaña Moreno</h3>
-            <a href="#" class="btn btn-outline-secondary btn-xl mt-3">Reservar ahora</a>
+            <a href="contact.html" class="btn btn-outline-secondary btn-xl mt-3">Reservar ahora</a>
         </section>
     </main>
 
