--- a/pages/cabNahuel.html
+++ b/pages/cabNahuel.html
@@ -190,7 +190,7 @@
 
         <section class="text-center">
             <h3 class="h3 text-center mt-2">Realice su reserva para la cabaña Nahuel</h3>
-            <a href="#" class="btn btn-outline-secondary btn-xl mt">Reservar ahora</a>
+            <a href="contact.html" class="btn btn-outline-secondary btn-xl mt">Reservar ahora</a>
         </section>
 
 
