--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <header> 
         <nav class="navbar  navbar-expand-lg navbar-light bg-light ml-auto "  >
           <div class="container"  >
-            <a class="navbar-brand" href="#" aria-label="Redireccion al inicio"><img src="images/iconMount.png" id="iconmont" alt="iconoMontaña"></a>
+            <a class="navbar-brand" href="index.html" aria-label="Redireccion al inicio"><img src="images/iconMount.png" id="iconmont" alt="iconoMontaña"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
