--- a/pages/casaCatedral.html
+++ b/pages/casaCatedral.html
@@ -195,7 +195,7 @@
 
         <section class="text-center">
             <h3 class="h3 text-center mt-4">Realice su reserva para la Casa Catedral</h3>
-            <a href="#" class="btn btn-outline-secondary btn-xl mt-3">Reservar ahora</a>
+            <a href="contact.html" class="btn btn-outline-secondary btn-xl mt-3">Reservar ahora</a>
         </section>
     </main>
 
